fix acceptance test