@@ -17,12 +17,12 @@ import org.zalando.nakadi.domain.NakadiCursor;
 import org.zalando.nakadi.domain.NakadiCursorLag;
 import org.zalando.nakadi.domain.PartitionStatistics;
 import org.zalando.nakadi.domain.Timeline;
-import org.zalando.nakadi.exceptions.runtime.InternalNakadiException;
 import org.zalando.nakadi.exceptions.InvalidCursorException;
-import org.zalando.nakadi.exceptions.runtime.NoSuchEventTypeException;
-import org.zalando.nakadi.exceptions.runtime.NotFoundException;
+import org.zalando.nakadi.exceptions.runtime.InternalNakadiException;
 import org.zalando.nakadi.exceptions.runtime.InvalidCursorOperation;
 import org.zalando.nakadi.exceptions.runtime.MyNakadiRuntimeException1;
+import org.zalando.nakadi.exceptions.runtime.NoSuchEventTypeException;
+import org.zalando.nakadi.exceptions.runtime.NotFoundException;
 import org.zalando.nakadi.exceptions.runtime.ServiceTemporarilyUnavailableException;
 import org.zalando.nakadi.repository.EventTypeRepository;
 import org.zalando.nakadi.service.AuthorizationValidator;
@@ -46,7 +46,6 @@ import java.util.stream.Collectors;
 import static javax.ws.rs.core.Response.Status.NOT_FOUND;
 import static javax.ws.rs.core.Response.Status.SERVICE_UNAVAILABLE;
 import static org.springframework.http.ResponseEntity.ok;
-import static org.zalando.problem.spring.web.advice.Responses.create;
 
 @RestController
 public class PartitionsController {
@@ -75,67 +74,51 @@ public class PartitionsController {
 
     @RequestMapping(value = "/event-types/{name}/partitions", method = RequestMethod.GET)
     public ResponseEntity<?> listPartitions(@PathVariable("name") final String eventTypeName,
-                                            final NativeWebRequest request) {
+                                            final NativeWebRequest request) throws Throwable {
         LOG.trace("Get partitions endpoint for event-type '{}' is called", eventTypeName);
-        try {
-            final EventType eventType = eventTypeRepository.findByName(eventTypeName);
-            authorizationValidator.authorizeStreamRead(eventType);
+        final EventType eventType = eventTypeRepository.findByName(eventTypeName);
+        authorizationValidator.authorizeStreamRead(eventType);
 
-            final List<Timeline> timelines = timelineService.getActiveTimelinesOrdered(eventTypeName);
-            final List<PartitionStatistics> firstStats = timelineService.getTopicRepository(timelines.get(0))
-                    .loadTopicStatistics(Collections.singletonList(timelines.get(0)));
-            final List<PartitionStatistics> lastStats;
-            if (timelines.size() == 1) {
-                lastStats = firstStats;
-            } else {
-                lastStats = timelineService.getTopicRepository(timelines.get(timelines.size() - 1))
-                        .loadTopicStatistics(Collections.singletonList(timelines.get(timelines.size() - 1)));
-            }
-            final List<EventTypePartitionView> result = firstStats.stream().map(first -> {
-                final PartitionStatistics last = lastStats.stream()
-                        .filter(l -> l.getPartition().equals(first.getPartition()))
-                        .findAny().get();
-                return new EventTypePartitionView(
-                        eventTypeName,
-                        first.getPartition(),
-                        cursorConverter.convert(first.getFirst()).getOffset(),
-                        cursorConverter.convert(last.getLast()).getOffset());
-            }).collect(Collectors.toList());
-            return ok().body(result);
-        } catch (final NoSuchEventTypeException e) {
-            return create(Problem.valueOf(NOT_FOUND, "topic not found"), request);
-        } catch (final InternalNakadiException e) {
-            LOG.error("Could not list partitions. Respond with SERVICE_UNAVAILABLE.", e);
-            return create(Problem.valueOf(SERVICE_UNAVAILABLE, e.getMessage()), request);
+        final List<Timeline> timelines = timelineService.getActiveTimelinesOrdered(eventTypeName);
+        final List<PartitionStatistics> firstStats = timelineService.getTopicRepository(timelines.get(0))
+                .loadTopicStatistics(Collections.singletonList(timelines.get(0)));
+        final List<PartitionStatistics> lastStats;
+        if (timelines.size() == 1) {
+            lastStats = firstStats;
+        } else {
+            lastStats = timelineService.getTopicRepository(timelines.get(timelines.size() - 1))
+                    .loadTopicStatistics(Collections.singletonList(timelines.get(timelines.size() - 1)));
         }
+        final List<EventTypePartitionView> result = firstStats.stream().map(first -> {
+            final PartitionStatistics last = lastStats.stream()
+                    .filter(l -> l.getPartition().equals(first.getPartition()))
+                    .findAny().get();
+            return new EventTypePartitionView(
+                    eventTypeName,
+                    first.getPartition(),
+                    cursorConverter.convert(first.getFirst()).getOffset(),
+                    cursorConverter.convert(last.getLast()).getOffset());
+        }).collect(Collectors.toList());
+        return ok().body(result);
     }
 
     @RequestMapping(value = "/event-types/{name}/partitions/{partition}", method = RequestMethod.GET)
     public ResponseEntity<?> getPartition(@PathVariable("name") final String eventTypeName,
                                           @PathVariable("partition") final String partition,
                                           @Nullable @RequestParam(value = "consumed_offset", required = false)
-                                              final String consumedOffset, final NativeWebRequest request) {
+                                          final String consumedOffset, final NativeWebRequest request)
+            throws InvalidCursorException {
         LOG.trace("Get partition endpoint for event-type '{}', partition '{}' is called", eventTypeName, partition);
-        try {
-            final EventType eventType = eventTypeRepository.findByName(eventTypeName);
-            authorizationValidator.authorizeStreamRead(eventType);
+        final EventType eventType = eventTypeRepository.findByName(eventTypeName);
+        authorizationValidator.authorizeStreamRead(eventType);
 
-            if (consumedOffset != null) {
-                final CursorLag cursorLag = getCursorLag(eventTypeName, partition, consumedOffset);
-                return ok().body(cursorLag);
-            } else {
-                final EventTypePartitionView result = getTopicPartition(eventTypeName, partition);
+        if (consumedOffset != null) {
+            final CursorLag cursorLag = getCursorLag(eventTypeName, partition, consumedOffset);
+            return ok().body(cursorLag);
+        } else {
+            final EventTypePartitionView result = getTopicPartition(eventTypeName, partition);
 
-                return ok().body(result);
-            }
-        } catch (final NoSuchEventTypeException e) {
-            return create(Problem.valueOf(NOT_FOUND, "topic not found"), request);
-        } catch (final InternalNakadiException e) {
-            LOG.error("Could not get partition. Respond with SERVICE_UNAVAILABLE.", e);
-            return create(Problem.valueOf(SERVICE_UNAVAILABLE, e.getMessage()), request);
-        } catch (final InvalidCursorException e) {
-            return create(Problem.valueOf(MoreStatus.UNPROCESSABLE_ENTITY, INVALID_CURSOR_MESSAGE),
-                    request);
+            return ok().body(result);
         }
     }
 
@@ -146,10 +129,30 @@ public class PartitionsController {
         return Responses.create(Problem.valueOf(MoreStatus.UNPROCESSABLE_ENTITY, INVALID_CURSOR_MESSAGE), request);
     }
 
+    @ExceptionHandler(InvalidCursorException.class)
+    public ResponseEntity<?> handleInvalidCursorException(final InvalidCursorException e,
+                                                    final NativeWebRequest request) {
+        return Responses.create(Problem.valueOf(MoreStatus.UNPROCESSABLE_ENTITY, INVALID_CURSOR_MESSAGE), request);
+    }
+
     @ExceptionHandler(NotFoundException.class)
-    public ResponseEntity<Problem> notFound(final NotFoundException ex, final NativeWebRequest request) {
+    public ResponseEntity<Problem> handleNotFoundException(final NotFoundException ex, final NativeWebRequest request) {
         LOG.error(ex.getMessage(), ex);
         return Responses.create(Response.Status.NOT_FOUND, ex.getMessage(), request);
+    }
+
+    @ExceptionHandler(NoSuchEventTypeException.class)
+    public ResponseEntity<?> handleNoSuchEventTypeException(final NoSuchEventTypeException e,
+                                                    final NativeWebRequest request) {
+        LOG.debug(e.getMessage());
+        return Responses.create(Problem.valueOf(NOT_FOUND, e.getMessage()), request);
+    }
+
+    @ExceptionHandler(InternalNakadiException.class)
+    public ResponseEntity<?> handleInternalNakadiException(final InternalNakadiException e,
+                                                    final NativeWebRequest request) {
+        LOG.debug("Could not get partition. Respond with SERVICE_UNAVAILABLE.", e);
+        return Responses.create(Problem.valueOf(SERVICE_UNAVAILABLE, e.getMessage()), request);
     }
 
     private CursorLag getCursorLag(final String eventTypeName, final String partition, final String consumedOffset)
